gcc/testsuite/rust/rustc/ui/type/type-check/issue-22897.rs
fn main() { }

fn unconstrained_type() {
    []; // { dg-error ".E0282." "" { target *-*-* } }
}

